--- a/team.html
+++ b/team.html
@@ -35,10 +35,149 @@
           </ul>
         </div>
     </nav>
-    <p>Our team page</p>
 
+    <div class="container-fluid" id="content">
+      <div class="container-fluid text-center my-5">
+        <h1 class="display-6 fw-bold">Our Team</h1>
+        <p>
+          Meet our talented team of stylists, colorists, and haircare specialists dedicated to transforming your look and enhancing your natural beauty.
+        </p>
+      </div>
 
+      <div class="container-md mb-5">
+        <div class="row row-cols-1 row-cols-md-3 g-5">
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/olivia.jpg" class="card-img-top" alt="Olivia"/>
+              <div class="card-body">
+                <h5 class="card-title">Olivia Ramirez</h5>
+                <h6 class="card-subtitle text-muted mb-4">Lead Stylist</h6>
+                <p class="card-text text-muted">
+                  Hi there! I'm Olivia, your lead stylist for sleek, modern cuts and vibrant color transformations. 
+                  With years of experience and a passion for precision, I'll make sure you leave the salon feeling confident and fabulous!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/ethan.jpg" class="card-img-top" alt="Ethan"/>
+              <div class="card-body">
+                <h5 class="card-title">Ethan Sullivan</h5>
+                <h6 class="card-subtitle text-muted mb-4">Colour Specialist</h6>
+                <p class="card-text text-muted">
+                  Hey, I'm Ethan! As a color specialist, I'm passionate about creating personalized color palettes to enhance your natural beauty or unleash your wild side. 
+                  From subtle highlights to bold transformations, let's add some vibrancy to your locks!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/sophie.jpg" class="card-img-top" alt="Sophie"/>
+              <div class="card-body">
+                <h5 class="card-title">Sophie Nguyen</h5>
+                <h6 class="card-subtitle text-muted mb-4">Bridal Specialist</h6>
+                <p class="card-text text-muted">
+                  Hi! I'm Sophie, dedicated to bringing timeless elegance and romantic flair to your special occasions. 
+                  Whether it's a classic updo or a vintage-inspired look, I'll ensure you feel like royalty on your big day!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/jackson.jpg" class="card-img-top" alt="Jackson"/>
+              <div class="card-body">
+                <h5 class="card-title">Jackson Patel</h5>
+                <h6 class="card-subtitle text-muted mb-4">Men's Grooming Consultant</h6>
+                <p class="card-text text-muted">
+                  Howdy! I'm Jackson, your friendly men's grooming consultant. 
+                  From classic cuts to personalized grooming routines, I'm here to ensure you look and feel your best.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/max.jpg" class="card-img-top" alt="Maxwell"/>
+              <div class="card-body">
+                <h5 class="card-title">Maxwell Chang</h5>
+                <h6 class="card-subtitle text-muted mb-4">Texture Specialist</h6>
+                <p class="card-text text-muted">
+                  I'm Max, your texture specialist, adept at transforming hair into works of art with unique textures and styles. 
+                  I do a range of styles, from sleek and straight to voluminous curls.
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="../assets/ava.jpg" class="card-img-top" alt="Ava"/>
+              <div class="card-body">
+                <h5 class="card-title">Ava Thompson</h5>
+                <h6 class="card-subtitle text-muted mb-4">Curl Specialist</h6>
+                <p class="card-text text-muted">
+                  Hi, I'm Ava, passionate about celebrating and enhancing your natural curls. 
+                  From protective styles to nourishing treatments, I'm here to help you embrace your unique hair texture with confidence
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>  
 
+      <!--footer-->
+    <div class="container-fluid col-md-10">
+      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-2 my-5 border-top">
+        <div class="col mb-3">
+          <h5 class="fw-bold">Virtue Hair Salon</h5>
+          <p class="text-muted">© 2024</p>
+          <ul class="nav flex-column">
+            <li class="mb-2"></li>
+            <li><p></p></li>
+            <li><h5>Contact Info</h5></li>
+            <li><p class="mb-2 text-muted">111-222-3333</p></li>
+            <li><p class="mb-2 text-muted">contact@virtuesalon.com</p></li>
+          </ul>
+        </div>
+        <div class="col mb-3">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7920.284678870193!2d-75.69252122793432!3d45.42459253947811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0506ec00c2bb%3A0xfc4e6e2329cb985f!2sTabaret%2C%2075%20Laurier%20Ave%20E%2C%20Ottawa%2C%20ON%20K1N%206N6!5e0!3m2!1sen!2sca!4v1717366076486!5m2!1sen!2sca" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="col mb-3">
+          <h5>Location</h5>
+          <ul class="nav flex-column">
+            <li><p class="mb-2 text-muted">75 Laurier Ave E</p></li>
+            <li><p class="mb-2 text-muted">Ottawa, ON</p></li>
+            <li><p class="mb-2 text-muted">Canada, K1N 6N6</p></li>
+          </ul>
+        </div>
     
+        <div class="col mb-3">
+          <h5>Opening Hours</h5>
+          <ul class="nav flex-column">
+            <li><p class="mb-2 text-muted">Monday: Closed</p></li>
+            <li><p class="mb-2 text-muted">Tuesday: 11–8pm</p></li>
+            <li><p class="mb-2 text-muted">Wednesday: 11–8pm</p></li>
+            <li><p class="mb-2 text-muted">Thursday: 11am–8pm</p></li>
+            <li><p class="mb-2 text-muted">Friday: 11am–8pm</p></li>
+            <li><p class="mb-2 text-muted">Saturday: 10am–5pm</p></li>
+            <li><p class="mb-2 text-muted">Sunday: Closed</p></li>
+          </ul>
+        </div>
+    
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
+            <li class="nav-item mb-2"><a href="services.html" class="nav-link p-0 text-muted">Services</a></li>
+            <li class="nav-item mb-2"><a href="team.html" class="nav-link p-0 text-muted">Our Team</a></li>
+            <li class="nav-item mb-2"><a href="book.html" class="nav-link p-0 text-muted">Book Appointment</a></li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+
   </body>
 </html>
