fix: experts' images not showing

--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-5">
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/olivia.jpg" class="card-img-top" alt="Olivia"/>
+              <img src="assets/olivia.jpg" class="card-img-top" alt="Olivia"/>
               <div class="card-body">
                 <h5 class="card-title">Olivia Ramirez</h5>
                 <h6 class="card-subtitle text-muted mb-4">Lead Stylist</h6>
@@ -61,7 +61,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/ethan.jpg" class="card-img-top" alt="Ethan"/>
+              <img src="assets/ethan.jpg" class="card-img-top" alt="Ethan"/>
               <div class="card-body">
                 <h5 class="card-title">Ethan Sullivan</h5>
                 <h6 class="card-subtitle text-muted mb-4">Colour Specialist</h6>
@@ -74,7 +74,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/sophie.jpg" class="card-img-top" alt="Sophie"/>
+              <img src="assets/sophie.jpg" class="card-img-top" alt="Sophie"/>
               <div class="card-body">
                 <h5 class="card-title">Sophie Nguyen</h5>
                 <h6 class="card-subtitle text-muted mb-4">Bridal Specialist</h6>
@@ -87,7 +87,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/jackson.jpg" class="card-img-top" alt="Jackson"/>
+              <img src="assets/jackson.jpg" class="card-img-top" alt="Jackson"/>
               <div class="card-body">
                 <h5 class="card-title">Jackson Patel</h5>
                 <h6 class="card-subtitle text-muted mb-4">Men's Grooming Consultant</h6>
@@ -100,7 +100,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/max.jpg" class="card-img-top" alt="Maxwell"/>
+              <img src="assets/max.jpg" class="card-img-top" alt="Maxwell"/>
               <div class="card-body">
                 <h5 class="card-title">Maxwell Chang</h5>
                 <h6 class="card-subtitle text-muted mb-4">Texture Specialist</h6>
@@ -112,7 +112,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="../assets/ava.jpg" class="card-img-top" alt="Ava"/>
+              <img src="assets/ava.jpg" class="card-img-top" alt="Ava"/>
               <div class="card-body">
                 <h5 class="card-title">Ava Thompson</h5>
                 <h6 class="card-subtitle text-muted mb-4">Curl Specialist</h6>
