feat: Add UI for booking form

--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
       <div class="container-md mb-5">
         <div class="row row-cols-1 row-cols-md-3 g-5">
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/olivia.jpg" class="card-img-top" alt="Olivia"/>
               <div class="card-body">
                 <h5 class="card-title">Olivia Ramirez</h5>
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/ethan.jpg" class="card-img-top" alt="Ethan"/>
               <div class="card-body">
                 <h5 class="card-title">Ethan Sullivan</h5>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/sophie.jpg" class="card-img-top" alt="Sophie"/>
               <div class="card-body">
                 <h5 class="card-title">Sophie Nguyen</h5>
@@ -86,7 +86,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/jackson.jpg" class="card-img-top" alt="Jackson"/>
               <div class="card-body">
                 <h5 class="card-title">Jackson Patel</h5>
@@ -99,7 +99,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/max.jpg" class="card-img-top" alt="Maxwell"/>
               <div class="card-body">
                 <h5 class="card-title">Maxwell Chang</h5>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100">
+            <div class="card h-100 shadow">
               <img src="assets/ava.jpg" class="card-img-top" alt="Ava"/>
               <div class="card-body">
                 <h5 class="card-title">Ava Thompson</h5>
@@ -168,7 +168,7 @@
         </div>
     
         <div class="col mb-3">
-          <h5>Section</h5>
+          <h5>Info</h5>
           <ul class="nav flex-column">
             <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-muted">Home</a></li>
             <li class="nav-item mb-2"><a href="services.html" class="nav-link p-0 text-muted">Services</a></li>
