--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
     <!--Navbar-->
     <nav class="navbar sticky-top navbar-expand py-3 light">
       <div class="container-fluid">
-        <a class="navbar-brand mx-5" href="#">
+        <a class="navbar-brand mx-5" href="index.html">
           <span class="fw-bold">Virtue Hair Salon</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
